// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should handle basic keywords 1`] = `
"declare type A = {
  a: void,
  b: string,
  c: any,
  d: number,
  e: boolean,
  f: null,
  g: void,
  h: { [key: string]: any },
  i: 1,
  j: 2,
  k: true,
  l: false,
  m: \\"foo\\",
  n: \\"bar\\",
  o: empty,
  p: mixed,
  r: -1,
  s: -2,
  t: Symbol,
  u: Symbol,
  v: [1, 2, 3],
  w: $ReadOnlyArray<string>,
  x: RegExp$matchResult,
  ...
};
"
`;

exports[`should handle basic keywords 2`] = `
"declare type A = {|
  a: void,
  b: string,
  c: any,
  d: number,
  e: boolean,
  f: null,
  g: void,
  h: { [key: string]: any },
  i: 1,
  j: 2,
  k: true,
  l: false,
  m: \\"foo\\",
  n: \\"bar\\",
  o: empty,
  p: mixed,
  r: -1,
  s: -2,
  t: Symbol,
  u: Symbol,
  v: [1, 2, 3],
  w: $ReadOnlyArray<string>,
  x: RegExp$matchResult,
|};
"
`;

exports[`should handle class types 1`] = `
"declare export class Foo {}
"
`;

exports[`should handle class types 2`] = `
"declare export class Foo {}
"
`;
